--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,9 +33,13 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/SU24_Xuong_Desktop_Nhom2
 excludes=
+file.reference.lombok.jar=lib/lombok.jar
+file.reference.mssql-jdbc-7.2.2.jre8.jar=lib/mssql-jdbc-7.2.2.jre8.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.mssql-jdbc-7.2.2.jre8.jar}:\
+    ${file.reference.lombok.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
